fixed img size on mobile for ladscape ad

--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ a {
 }
 
 /* Native Ad Styling */
-
 .main-container {
   width: 100%;
   max-width: 814px;
@@ -37,9 +36,9 @@ a {
 }
 .ad-image {
   border-right: 0.125rem solid #f0f0f0;
-  padding-right: 2rem;
+  padding-right: 1.35rem;
   width: 40%;
-  max-width: 290px;
+  max-width: 380px;
 }
 .ad-image img {
   height: auto;
@@ -82,6 +81,11 @@ button:hover {
   margin-left: 8px;
 }
 
+/* 16:9 Image */
+.sixteen-nine .ad-image {
+  width: 45%;
+}
+
 /* Import Fonts*/
 
 @font-face {
@@ -121,6 +125,7 @@ button:hover {
   font-size: 0.75rem;
   letter-spacing: 0.0625rem;
   line-height: 1.333333333333333;
+  margin: 0;
 }
 .UIParagraph {
   font-weight: 400;
@@ -170,9 +175,25 @@ button:hover {
     padding: 0.3rem;
     border-top: 1px solid #f0f0f0;
   }
+  .sixteen-nine .ad-image {
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width: 460px) {
 }
 @media only screen and (max-width: 320px) {
+}
+
+/* Menu */
+.nav ul {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+}
+.nav li {
+  list-style: none;
+  background-color: #fff;
 }
